# reskip

./: .gitignore  1232.txt  ATTNRES_SKIP_LOOP_PLAN_CN.md  DYNAMIC_SKIP_EXPERIMENT_LOG.md  DYNAMIC_SKIP_MECHANISM.md  EXPERIMENTS_CN.md  EXPERIMENT_PLAYBOOK.md  FLAME_LM_PLAYBOOK.md  PLAN.md  PROJECT_OVERVIEW_CN.md  README.md  RELOOP_EXPERIMENT_LOG.md  RESKIP_1P3B_PIPELINE_CN.md  RETROFIT_PAPER_PLAN.md  STARVLA_ATTNRES_PLAYBOOK.md  paperchange.md  pyproject.toml  requirements.txt  run_all.py  train.sh
configs/: looping_small.yaml  standard_small.yaml  vla_libero.yaml
experiments/: analyze_routing.py  benchmark_vla.py  compare_fsdp_loss.py  export_ablation_skip_models.py  export_results_to_latex.py  flame_analyze_reloop.py  flame_analyze_reloop_attnres.py  flame_analyze_reskip.py  flame_generate.py  flame_lm_eval.py  flame_reskip_common.py  train_lm.py
flame/: .gitignore  train.sh
ouro-loop/: configuration_ouro.py  modeling_ouro.py
paper/: MOTIVATION_EXPERIMENTS.md  README.md  compile.sh  main.tex  main_v1.tex  neurips_2026.sty  references.bib
rechange/: RECHANGE_DESIGN_CN.md  eval_qwen3vl_attnres_dynamic.py  eval_qwen3vl_attnres_retrofit.py  eval_qwen3vl_attnres_text.py  qwen3vl_attnres_retrofit.py  smoke_test_qwen3vl_attnres_retrofit.py  train_qwen3vl_attnres_retrofit.py
retrofit/: README.md  VLA_LIBERO_RESULTS.md  analyze_alpha.py  analyze_qwen3vl.py  compile_utils.py  eval_skip.py  generate_compare.py  prune_and_recover.py  prune_qwen3vl.py  qwen3vl_attnres_retrofit.py  qwen3vl_retrofit.py  retrofit.md  retrofit_model.py  skip_inference.py  smoke_test.py  (+2 more)
(+276 files in other folders)
