[project]
name = "reskip"
version = "0.1.0"
description = "Attention Residuals as Adaptive Computation Routers"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
data = [
    "datasets>=2.14.0",
    "tiktoken>=0.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
